infrastructure/immich/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-postgres
  namespace: media
spec:
  serviceName: immich-postgres
  replicas: 1
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      containers:
        - name: postgres
          image: tensorchord/pgvecto-rs:pg14-v0.2.0
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ReadWriteOnce]
        storageClassName: local-path
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgresql
  namespace: media
spec:
  selector:
    app: immich-postgres
  ports:
    - port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: media
spec:
  selector:
    app: immich-postgres
  ports:
    - port: 5432
