infrastructure/immich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`photos.jklu-lab.eu`)
      kind: Rule
      services:
        - name: immich-server
          port: 2283
          responseForwarding:
            flushInterval: 1ms
      middlewares:
        - name: immich-headers
          namespace: media
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: immich-headers
  namespace: media
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
